[tool.poetry]
name = "paste"
version = "0.1.0"
description = ""
authors = ["Diogo Lima <diogooo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
uvicorn = "^0.19.0"
fastapi = "^0.87.0"
email-validator = "^1.3.0"
environs = "^9.5.0"
peewee = "^3.15.4"
psycopg2 = "^2.9.5"
python-slugify = "^6.1.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
